fix(billing/ON): round-10 review fixes — privilege parity, manual-billing providerNo, PHI hygiene
M1 — billingONReview.jsp fallback now re-checks `_billing w` (matches the
action's privilege) instead of `_billing r`, so the read-only fallback
doesn't quietly admit users who can't reach the action itself.

M2 — billingONCorrection.jsp HIN now renders through ${carlos:forHtmlContent}
and the hidden xml_hin via ${carlos:forHtmlAttribute}; raw <%=hin%> in two
sites was a residual PHI-on-page-source XSS concern.

M3 — billingON.jsp `defaultBillFormName` EL now reads `formModel.*` (was
`model.*`, which silently rendered empty since the request attribute is
keyed `formModel`).

M4 — drop the duplicate hidden `<input name="billForm">` in billingON.jsp;
two inputs of the same name made the last-wins value depend on tag order.

M5 — defense-in-depth replace ' ' → '_' on the rendered dx-code element id
(parser already strips spaces from the bucket key, but the EL output had no
guard against a future code with spaces breaking the DOM id).

M6 — JSP scriptlet fallback path now stashes the freshly-built model on the
request attribute `formModel`, so EL after the fallback assemble() call
resolves correctly.

S1 — billingValidationError.jsp declares the OWASP encoder taglib (the
previous file used `<e:forXxx>` without the `<%@ taglib %>` directive — JSP
silently rendered the tag literal).

S2 — manual-billing providerNo now falls back through xml_provider /
providerview before defaulting to the logged-in user. Previously,
apptProvider_no="" left providerNo="" for every manual bill creation,
which silently disabled provider-preference + default-billing-form lookups.

S3 — ErrorPageLogger now strips both the query string and any `;jsessionid`
path parameter before logging the URI (the latter contains the session id
in URL-rewriting fallback mode).

S4/S5 — BDD test naming nits in BillingONReviewDxPersisterUnitTest.

S6 — encoder-null-safety lint regex now matches prefix-${carlos:forH